--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,10 @@
     box-sizing: border-box;
     border: 0.1px solid rgba(0, 0, 0, 0);
 }
-.main {
+html, body {
+    height: 100%;
     background-image: url(../images/bread.jpg);
-    background-size: cover;
+    background-size: cover
 }
 a {
     text-decoration: none;
@@ -105,7 +106,7 @@ hr {
     width: 100%;
     bottom: 0;
     text-align: center;
-    background-color: rgba(204, 157, 100);
+    background-color: rgba(204, 157, 100, 0.7);
     height: 60px;
     line-height: 60px;
     text-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
