--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ a {
     width: 90%;
     height: 800px;
     margin: 0 auto;
+    max-width: 1280px;
 }
 .logo {
     font-size: 30px;
@@ -52,6 +53,9 @@ p {
     margin-top: 30px;
     line-height: 2;
 }
+.content {
+    border: 0;
+}
 .content a {
     display: inline-block;
     width: 150px;
@@ -65,6 +69,78 @@ p {
 }
 .content a:hover {
     background-color: transparent;
+}
+.content .background-box {
+    background-image: url(../images/about_make_bakery.jpg);
+    width: 100%;
+    height: 600px;
+    text-align: center;
+    line-height: 600px;
+    background-size: cover;
+    margin-top: 100px;
+    border: 30px solid white;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.5);
+}
+.content .box-fifty {
+    width: 50%;
+    height: 500px;
+    line-height: 500px;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    float: left;
+    margin-top: 100px;
+    background-size: cover;
+    
+}
+.content .product1 {
+    background-image: url(../images/product_1.jpg);
+}
+.content .product2 {
+    background-image: url(../images/product_2.jpg);
+}
+.content form {
+    width: 90%;
+    max-width: 1280px;
+    height: 650px;
+    margin: 0 auto;
+    background-color: rgba(204, 157, 100, 0.7);
+    padding: 30px;
+    margin-top: 50px;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.5);
+    font-size: 20px;
+    
+}
+.content form * {
+    text-shadow: none;
+}
+.content #name, .content #email, .content #message {
+    width: 100%;
+    height: 30px;
+    background-color: rgba(0, 0, 0, 0.3);
+    padding: 10px;
+}
+.content #message {
+    height: 300px;
+}
+.content label {
+    display: block;
+    padding: 10px 0;
+}
+.form-buttom {
+    text-align: center;
+    margin-top: 20px;
+}
+input[type="reset"], input[type="submit"] {
+    width: 300px;
+    height: 50px;
+    margin: 10px;;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+.content ::placeholder {
+    color: rgba(0, 0, 0, 0.5);
+    font-size: 16px;
 }
 hr {
     width: 350px;
@@ -100,7 +176,6 @@ hr {
 .button li a img {
     width: 100%;
 }
-
 .footer {
     position: fixed;
     width: 100%;
