--- a/css/style.css
+++ b/css/style.css
@@ -186,3 +186,7 @@ hr {
     line-height: 60px;
     text-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
 }
+*[alt="www.000webhost.com"]
+{
+    display: none;
+}
